cabal-version:      1.12
name:               hs-opentelemetry-api
version:            0.2.0.0.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          2024 Ian Duncan, Mercury Technologies
maintainer:         ian@iankduncan.com
author:             Ian Duncan, Jade Lovelace
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
synopsis:
    OpenTelemetry API for use by libraries for direct instrumentation or wrapper packages.

description:
    Please see the README on GitHub at <https://github.com/iand675/hs-opentelemetry/tree/main/api#readme>

category:
    OpenTelemetry, Telemetry, Monitoring, Observability, Metrics

build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/iand675/hs-opentelemetry

library
    exposed-modules:
        OpenTelemetry.Attributes
        OpenTelemetry.Attributes.Attribute
        OpenTelemetry.Attributes.Key
        OpenTelemetry.Attributes.Map
        OpenTelemetry.Baggage
        OpenTelemetry.Common
        OpenTelemetry.Context
        OpenTelemetry.Context.ThreadLocal
        OpenTelemetry.Contrib.CarryOns
        OpenTelemetry.Contrib.SpanTraversals
        OpenTelemetry.Environment
        OpenTelemetry.Exporter
        OpenTelemetry.Exporter.LogRecord
        OpenTelemetry.Exporter.Span
        OpenTelemetry.Internal.Common.Types
        OpenTelemetry.Internal.Logs.Core
        OpenTelemetry.Internal.Logs.Types
        OpenTelemetry.Internal.Trace.Id
        OpenTelemetry.LogAttributes
        OpenTelemetry.Logs.Core
        OpenTelemetry.Processor
        OpenTelemetry.Processor.LogRecord
        OpenTelemetry.Processor.Span
        OpenTelemetry.Propagator
        OpenTelemetry.Resource
        OpenTelemetry.Resource.Cloud
        OpenTelemetry.Resource.Container
        OpenTelemetry.Resource.DeploymentEnvironment
        OpenTelemetry.Resource.Device
        OpenTelemetry.Resource.FaaS
        OpenTelemetry.Resource.Host
        OpenTelemetry.Resource.Kubernetes
        OpenTelemetry.Resource.OperatingSystem
        OpenTelemetry.Resource.Process
        OpenTelemetry.Resource.Service
        OpenTelemetry.Resource.Telemetry
        OpenTelemetry.Resource.Webengine
        OpenTelemetry.SemanticsConfig
        OpenTelemetry.Trace.Core
        OpenTelemetry.Trace.Id
        OpenTelemetry.Trace.Id.Generator
        OpenTelemetry.Trace.Id.Generator.Dummy
        OpenTelemetry.Trace.Monad
        OpenTelemetry.Trace.Sampler
        OpenTelemetry.Trace.TraceState
        OpenTelemetry.Util

    hs-source-dirs:     src
    other-modules:
        OpenTelemetry.Context.Types
        OpenTelemetry.Internal.Trace.Types
        Paths_hs_opentelemetry_api

    default-language:   Haskell2010
    default-extensions: OverloadedStrings RecordWildCards
    ghc-options:        -Wall
    build-depends:
        async,
        attoparsec,
        base >=4.7 && <5,
        binary,
        bytestring,
        charset,
        clock,
        hashable,
        http-types,
        memory,
        mtl,
        regex-tdfa,
        safe-exceptions,
        template-haskell,
        text,
        thread-utils-context >=0.3 && <0.4,
        transformers,
        unliftio-core,
        unordered-containers,
        vault,
        vector,
        vector-builder

test-suite hs-opentelemetry-api-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        OpenTelemetry.AttributesSpec
        OpenTelemetry.BaggageSpec
        OpenTelemetry.InstrumentationLibrarySpec
        OpenTelemetry.Logs.CoreSpec
        OpenTelemetry.ResourceSpec
        OpenTelemetry.SemanticsConfigSpec
        OpenTelemetry.Trace.SamplerSpec
        OpenTelemetry.Trace.TraceFlagsSpec
        Paths_hs_opentelemetry_api

    default-language:   Haskell2010
    default-extensions: OverloadedStrings RecordWildCards
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hs-opentelemetry-api,
        hspec,
        mtl,
        text,
        unliftio-core,
        unordered-containers,
        vector,
        vector-builder
