cabal-version:      1.12
name:               hs-opentelemetry-exporter-otlp
version:            0.1.0.0.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          2021 Ian Duncan
maintainer:         ian@iankduncan.com
author:             Ian Duncan
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
synopsis:
    OpenTelemetry exporter supporting the standard OTLP protocol

description:
    Please see the README on GitHub at <https://github.com/iand675/hs-opentelemetry/tree/main/exporters/otlp#readme>

category:
    OpenTelemetry, Telemetry, Monitoring, Observability, Metrics

build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/iand675/hs-opentelemetry

library
    exposed-modules:
        OpenTelemetry.Exporter.OTLP
        OpenTelemetry.Exporter.OTLP.LogRecord
        OpenTelemetry.Exporter.OTLP.Span

    hs-source-dirs:   src
    other-modules:    Paths_hs_opentelemetry_exporter_otlp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        bytestring,
        case-insensitive,
        hs-opentelemetry-api >=0.2 && <0.3,
        hs-opentelemetry-otlp >=0.1 && <0.2,
        http-client,
        http-conduit,
        http-types,
        microlens,
        proto-lens >=0.7.1.0,
        text,
        unordered-containers,
        vector,
        zlib
