cabal-version:      1.12
name:               hs-opentelemetry-otlp
version:            0.1.0.0.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          2024 Ian Duncan, Mercury Technologies
maintainer:         ian@iankduncan.com
author:             Ian Duncan, Jade Lovelace
homepage:           https://github.com/iand675/hs-opentelemetry#readme
bug-reports:        https://github.com/iand675/hs-opentelemetry/issues
synopsis:
    OpenTelemetry protocol buffer modules generated for the OTLP protocol by the proto-lens package

description:
    Please see the README on GitHub at <https://github.com/iand675/hs-opentelemetry#readme>

category:           OpenTelemetry
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md
    proto/opentelemetry/proto/collector/logs/v1/logs_service.proto
    proto/opentelemetry/proto/collector/metrics/v1/metrics_service.proto
    proto/opentelemetry/proto/collector/profiles/v1development/profiles_service.proto
    proto/opentelemetry/proto/collector/trace/v1/trace_service.proto
    proto/opentelemetry/proto/common/v1/common.proto
    proto/opentelemetry/proto/logs/v1/logs.proto
    proto/opentelemetry/proto/metrics/v1/metrics.proto
    proto/opentelemetry/proto/profiles/v1development/profiles.proto
    proto/opentelemetry/proto/resource/v1/resource.proto
    proto/opentelemetry/proto/trace/v1/trace.proto

source-repository head
    type:     git
    location: https://github.com/iand675/hs-opentelemetry

library
    exposed-modules:
        Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService
        Proto.Opentelemetry.Proto.Collector.Logs.V1.LogsService_Fields
        Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService
        Proto.Opentelemetry.Proto.Collector.Metrics.V1.MetricsService_Fields
        Proto.Opentelemetry.Proto.Collector.Profiles.V1development.ProfilesService
        Proto.Opentelemetry.Proto.Collector.Profiles.V1development.ProfilesService_Fields
        Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService
        Proto.Opentelemetry.Proto.Collector.Trace.V1.TraceService_Fields
        Proto.Opentelemetry.Proto.Common.V1.Common
        Proto.Opentelemetry.Proto.Common.V1.Common_Fields
        Proto.Opentelemetry.Proto.Logs.V1.Logs
        Proto.Opentelemetry.Proto.Logs.V1.Logs_Fields
        Proto.Opentelemetry.Proto.Metrics.V1.Metrics
        Proto.Opentelemetry.Proto.Metrics.V1.Metrics_Fields
        Proto.Opentelemetry.Proto.Profiles.V1development.Profiles
        Proto.Opentelemetry.Proto.Profiles.V1development.Profiles_Fields
        Proto.Opentelemetry.Proto.Resource.V1.Resource
        Proto.Opentelemetry.Proto.Resource.V1.Resource_Fields
        Proto.Opentelemetry.Proto.Trace.V1.Trace
        Proto.Opentelemetry.Proto.Trace.V1.Trace_Fields

    hs-source-dirs:   src
    other-modules:    Paths_hs_opentelemetry_otlp
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        proto-lens-runtime
