cabal-version:      >=1.10
name:               monad-metrics
version:            0.2.2.0.0.0.0.0.1
license:            MIT
license-file:       LICENSE
copyright:          2018 Matt Parsons, 2017 Seller Labs, 2016 Taylor Fausak
maintainer:         parsonsmatt@gmail.com
author:             Matthew Parsons
homepage:           https://github.com/parsonsmatt/monad-metrics#readme
synopsis:           A convenient wrapper around EKG metrics
description:
    A convenient wrapper for collecting application metrics. Please see the README.md for more information.

category:           Web
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/sellerlabs/monad-metrics

library
    exposed-modules:
        Control.Monad.Metrics
        Control.Monad.Metrics.Internal

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.8 && <5,
        clock >=0.3 && <0.9,
        ekg-core >=0.1.0.1 && <0.2,
        exceptions >=0.6 && <0.11,
        hashable >=1.2 && <1.5,
        microlens >=0.2 && <0.5,
        mtl >=2 && <2.3,
        text <1.3,
        transformers >=0.3 && <0.6,
        unordered-containers >=0.2 && <0.3

test-suite monad-metrics-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.8 && <=5.0,
        monad-metrics
