cabal-version:      1.12
name:               morpheus-graphql-code-gen-utils
version:            0.27.3.0.0.0.0.3
license:            BSD3
license-file:       LICENSE
copyright:          (c) 2019 Daviti Nalchevanidze
maintainer:         d.nalchevanidze@gmail.com
author:             Daviti Nalchevanidze
homepage:           https://morpheusgraphql.com
bug-reports:        https://github.com/morpheusgraphql/morpheus-graphql/issues
synopsis:           Morpheus GraphQL CLI
description:        code generator for Morpheus GraphQL
category:           web, graphql, cli
build-type:         Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type:     git
    location: https://github.com/morpheusgraphql/morpheus-graphql

library
    exposed-modules:
        Data.Morpheus.CodeGen.Internal.AST
        Data.Morpheus.CodeGen.Printer
        Data.Morpheus.CodeGen.TH
        Data.Morpheus.CodeGen.Utils

    hs-source-dirs:   src
    other-modules:
        Data.Morpheus.CodeGen.Internal.Flags
        Data.Morpheus.CodeGen.Internal.Name
        Paths_morpheus_graphql_code_gen_utils

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7.0 && <5.0.0,
        bytestring >=0.10.4 && <0.12.0,
        containers >=0.4.2.1 && <0.7.0,
        morpheus-graphql-core >=0.27.0 && <0.28.0,
        mtl >=2.0.0 && <3.0.0,
        prettyprinter >=1.7.0 && <2.0.0,
        relude >=0.3.0 && <2.0.0,
        template-haskell >=2.0.0 && <3.0.0,
        text >=1.2.3 && <3.0.0,
        unordered-containers >=0.2.8 && <0.3.0
