cabal-version:      1.12
name:               morpheus-graphql-code-gen
version:            0.27.3.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          (c) 2019 Daviti Nalchevanidze
maintainer:         d.nalchevanidze@gmail.com
author:             Daviti Nalchevanidze
homepage:           https://morpheusgraphql.com
bug-reports:        https://github.com/morpheusgraphql/morpheus-graphql/issues
synopsis:           Morpheus GraphQL CLI
description:        code generator for Morpheus GraphQL
category:           web, graphql, cli
build-type:         Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type:     git
    location: https://github.com/morpheusgraphql/morpheus-graphql

library
    exposed-modules:
        Data.Morpheus.CodeGen
        Data.Morpheus.CodeGen.Server

    hs-source-dirs:   src
    other-modules:
        Data.Morpheus.CodeGen.Server.Internal.AST
        Data.Morpheus.CodeGen.Server.Interpreting.Directive
        Data.Morpheus.CodeGen.Server.Interpreting.Transform
        Data.Morpheus.CodeGen.Server.Interpreting.Utils
        Data.Morpheus.CodeGen.Server.Printing.TH
        Paths_morpheus_graphql_code_gen

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7.0 && <5.0.0,
        bytestring >=0.10.4 && <0.12.0,
        containers >=0.4.2.1 && <0.7.0,
        file-embed >=0.0.10 && <1.0.0,
        morpheus-graphql-code-gen-utils >=0.27.0 && <0.28.0,
        morpheus-graphql-core >=0.27.0 && <0.28.0,
        morpheus-graphql-server >=0.27.0 && <0.28.0,
        prettyprinter >=1.7.0 && <2.0.0,
        relude >=0.3.0 && <2.0.0,
        template-haskell >=2.0.0 && <3.0.0,
        text >=1.2.3 && <3.0.0,
        unordered-containers >=0.2.8 && <0.3.0

executable morpheus
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        CLI.Commands
        CLI.Config
        CLI.File
        CLI.Generator
        Paths_morpheus_graphql_code_gen

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        Glob >=0.7.0 && <1.0.0,
        base >=4.7.0 && <5.0.0,
        bytestring >=0.10.4 && <0.12.0,
        containers >=0.4.2.1 && <0.7.0,
        file-embed >=0.0.10 && <1.0.0,
        filepath >=1.1.0 && <1.5.0,
        morpheus-graphql-client,
        morpheus-graphql-code-gen,
        morpheus-graphql-code-gen-utils,
        morpheus-graphql-core >=0.27.0 && <0.28.0,
        morpheus-graphql-server >=0.27.0 && <0.28.0,
        optparse-applicative >=0.12.0 && <0.18.0,
        prettyprinter >=1.7.0 && <2.0.0,
        relude >=0.3.0 && <2.0.0,
        template-haskell >=2.0.0 && <3.0.0,
        text >=1.2.3 && <3.0.0,
        unordered-containers >=0.2.8 && <0.3.0,
        yaml >=0.8.32 && <1.0.0
