cabal-version: 1.12
name:          morpheus-graphql-tests
version:       0.27.3.0.0.0.0.1
license:       MIT
copyright:     (c) 2019 Daviti Nalchevanidze
maintainer:    d.nalchevanidze@gmail.com
author:        Daviti Nalchevanidze
homepage:      https://morpheusgraphql.com
bug-reports:   https://github.com/nalchevanidze/morpheus-graphql/issues
synopsis:      Morpheus GraphQL Test
category:      web, graphql, test
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/nalchevanidze/morpheus-graphql

library
    exposed-modules:  Test.Morpheus
    hs-source-dirs:   src
    other-modules:
        Test.Morpheus.File
        Test.Morpheus.JSONDiff
        Test.Morpheus.Response
        Test.Morpheus.Utils
        Paths_morpheus_graphql_tests

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        aeson >=1.4.4 && <3.0.0,
        base >=4.7.0 && <5.0.0,
        bytestring >=0.10.4 && <0.12.0,
        directory >=1.0.0 && <2.0.0,
        relude >=0.3.0 && <2.0.0,
        tasty >=0.1.0 && <1.5.0,
        tasty-hunit >=0.1.0 && <1.0.0,
        text >=1.2.3 && <3.0.0,
        unordered-containers >=0.2.8 && <0.3.0
