cabal-version: 3.0
name:          postgresql-syntax
version:       0.4.1.3.0.0.0.0.1
license:       MIT
license-file:  LICENSE
copyright:     (c) 2020, Nikita Volkov
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
homepage:      https://github.com/nikita-volkov/postgresql-syntax
bug-reports:   https://github.com/nikita-volkov/postgresql-syntax/issues
synopsis:      PostgreSQL AST parsing and rendering
description:
    Postgres syntax tree and related utils extracted from the \"hasql-th\" package.
    The API is in a rather raw \"guts out\" state with most documentation lacking,
    but the codebase is well tested.

category:      Database, PostgreSQL, Parsing

source-repository head
    type:     git
    location: https://github.com/nikita-volkov/postgresql-syntax

library
    exposed-modules:
        PostgresqlSyntax.Ast
        PostgresqlSyntax.KeywordSet
        PostgresqlSyntax.Parsing
        PostgresqlSyntax.Renaming
        PostgresqlSyntax.Rendering
        PostgresqlSyntax.Validation

    hs-source-dirs:     library
    other-modules:
        PostgresqlSyntax.CharSet
        PostgresqlSyntax.Extras.HeadedMegaparsec
        PostgresqlSyntax.Extras.NonEmpty
        PostgresqlSyntax.Extras.TextBuilder
        PostgresqlSyntax.Predicate
        PostgresqlSyntax.Prelude

    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns ConstraintKinds DataKinds
        DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
        DeriveGeneric DeriveTraversable DuplicateRecordFields
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        ParallelListComp PatternGuards QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeOperators UnboxedTuples

    build-depends:
        base >=4.12 && <5,
        bytestring >=0.10 && <0.13,
        case-insensitive >=1.2.1 && <2,
        hashable >=1.3.5 && <2,
        headed-megaparsec >=0.2.0.1 && <0.3,
        megaparsec >=9.2 && <10,
        parser-combinators >=1.3 && <1.4,
        text >=1 && <3,
        text-builder >=1 && <1.1,
        unordered-containers >=0.2.16 && <0.3,
        mtl >=2.3.1 && <2.5,
        containers >=0.6.8 && <0.9

test-suite tasty-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tasty-test
    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns ConstraintKinds DataKinds
        DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
        DeriveGeneric DeriveTraversable DuplicateRecordFields
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        ParallelListComp PatternGuards QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeOperators UnboxedTuples

    ghc-options:        -threaded
    build-depends:
        postgresql-syntax,
        rerebase <2,
        tasty >=1.2.3 && <2,
        tasty-hunit >=0.10 && <0.11

test-suite hedgehog-test
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hedgehog-test
    other-modules:      Main.Gen
    default-language:   Haskell2010
    default-extensions:
        ApplicativeDo Arrows BangPatterns ConstraintKinds DataKinds
        DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
        DeriveGeneric DeriveTraversable DuplicateRecordFields
        EmptyDataDecls FlexibleContexts FlexibleInstances
        FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
        LiberalTypeSynonyms MagicHash MultiParamTypeClasses MultiWayIf
        NoImplicitPrelude NoMonomorphismRestriction OverloadedStrings
        ParallelListComp PatternGuards QuasiQuotes RankNTypes
        RecordWildCards ScopedTypeVariables StandaloneDeriving
        TemplateHaskell TupleSections TypeApplications TypeFamilies
        TypeOperators UnboxedTuples

    ghc-options:        -threaded
    build-depends:
        hedgehog >=1.0.1 && <2,
        postgresql-syntax,
        rerebase >=1.6.1 && <2
