cabal-version:      >=1.10
name:               serversession-backend-persistent
version:            1.0.5.0.0.0.0.1
license:            MIT
license-file:       LICENSE
maintainer:         Michael Xavier <michael@michaelxavier.net>
author:             Felipe Lessa <felipe.lessa@gmail.com>
stability:          Stable
homepage:           https://github.com/yesodweb/serversession
synopsis:
    Storage backend for serversession using persistent and an RDBMS.

description:
    API docs and the README are available at <http://www.stackage.org/package/serversession-backend-persistent>

category:           Web
build-type:         Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type:     git
    location: https://github.com/yesodweb/serversession

flag lib-werror
    default: False
    manual:  True

library
    exposed-modules:
        Web.ServerSession.Backend.Persistent
        Web.ServerSession.Backend.Persistent.Internal.Impl
        Web.ServerSession.Backend.Persistent.Internal.Types

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions:
        DeriveDataTypeable EmptyDataDecls FlexibleContexts
        FlexibleInstances GADTs GeneralizedNewtypeDeriving
        OverloadedStrings PatternGuards QuasiQuotes RecordWildCards
        ScopedTypeVariables StandaloneDeriving TemplateHaskell TypeFamilies
        UndecidableInstances

    ghc-options:        -Wall
    build-depends:
        base >=4 && <5,
        aeson,
        base64-bytestring >=1.2 && <1.3,
        bytestring,
        cereal >=0.4,
        path-pieces,
        persistent >=2.10,
        tagged >=0.7,
        text,
        time,
        transformers,
        unordered-containers,
        serversession >=1.0 && <1.1

    if flag(lib-werror)
        ghc-options: -Werror

test-suite tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     tests
    default-language:   Haskell2010
    default-extensions: OverloadedStrings TemplateHaskell
    ghc-options:        -Wall -threaded "-with-rtsopts=-N -s -M2G -c" -rtsopts
    build-depends:
        base,
        aeson,
        base64-bytestring,
        bytestring,
        cereal,
        path-pieces,
        persistent,
        persistent-template,
        text,
        time,
        transformers,
        unordered-containers,
        hspec >=2.1 && <3,
        monad-logger,
        persistent-sqlite >=2.1,
        persistent-postgresql >=2.1,
        resource-pool,
        QuickCheck,
        serversession,
        serversession-backend-persistent

    if flag(lib-werror)
        ghc-options: -Werror
