cabal-version:      >=1.10
name:               serversession-frontend-yesod
version:            1.0.0.0.0.0.1
license:            MIT
license-file:       LICENSE
maintainer:         Michael Xavier <michael@michaelxavier.net>
author:             Felipe Lessa <felipe.lessa@gmail.com>
stability:          Stable
homepage:           https://github.com/yesodweb/serversession
synopsis:           Yesod bindings for serversession.
description:
    API docs and the README are available at <http://www.stackage.org/package/serversession-frontend-yesod>

category:           Web
build-type:         Simple
extra-source-files:
    README.md
    changelog.md

source-repository head
    type:     git
    location: https://github.com/yesodweb/serversession

flag lib-werror
    default: False
    manual:  True

library
    exposed-modules:
        Web.ServerSession.Frontend.Yesod
        Web.ServerSession.Frontend.Yesod.Internal

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: FlexibleContexts OverloadedStrings TypeFamilies
    ghc-options:        -Wall
    build-depends:
        base >=4 && <5,
        bytestring,
        containers,
        cookie >=0.4,
        data-default,
        path-pieces,
        text,
        time,
        transformers,
        unordered-containers,
        wai,
        yesod-core >=1.6,
        serversession >=1.0 && <1.1

    if flag(lib-werror)
        ghc-options: -Werror
