cabal-version:      >=1.10
name:               smtp-mail
version:            0.3.0.0.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
maintainer:         parsonsmatt@gmail.com
author:             Jason Hickner, Matt Parsons
homepage:           http://github.com/jhickner/smtp-mail
synopsis:           Simple email sending via SMTP
description:
    This packages provides a simple interface for mail over SMTP. PLease see the README for more information.

category:           Network
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: git@github.com:jhickner/smtp-mail.git

library
    exposed-modules:
        Network.Mail.SMTP
        Network.Mail.SMTP.Auth
        Network.Mail.SMTP.Types

    default-language: Haskell2010
    ghc-options:      -Wall -fwarn-tabs
    build-depends:
        base >=4.5 && <5,
        array,
        base16-bytestring,
        base64-bytestring,
        bytestring,
        crypton-connection,
        filepath,
        mime-mail,
        network,
        network-bsd,
        text,
        crypton,
        memory
