cabal-version:      1.12
name:               streamly-cassava
version:            0.1.1.0.0.0.0.0.1
license:            BSD3
license-file:       LICENSE
copyright:          2019 Richard Warfield
maintainer:         richard@litx.io
author:             Richard Warfield
homepage:           https://github.com/litxio/streamly-cassava#readme
bug-reports:        https://github.com/litxio/streamly-cassava/issues
synopsis:
    CSV streaming support via cassava for the streamly ecosystem

description:
    Please see the README on GitHub at <https://github.com/litxio/streamly-cassava#readme>

category:           Streaming
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/litxio/streamly-cassava

library
    exposed-modules:  Streamly.Csv
    hs-source-dirs:   src
    other-modules:    Paths_streamly_cassava
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        bytestring,
        cassava,
        exceptions,
        mtl,
        streamly >=0.8 && <0.9

test-suite streamly-cassava-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:    Paths_streamly_cassava
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        QuickCheck,
        base >=4.7 && <5,
        bytestring,
        cassava,
        exceptions,
        hspec,
        mtl,
        quickcheck-instances,
        streamly >=0.8 && <0.9,
        streamly-cassava,
        text,
        vector

benchmark streamly-cassava-bench
    type:             exitcode-stdio-1.0
    main-is:          Bench.hs
    hs-source-dirs:   bench
    other-modules:    Paths_streamly_cassava
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        bytestring,
        cassava,
        criterion,
        exceptions,
        mtl,
        streaming,
        streaming-bytestring,
        streaming-cassava,
        streaming-with,
        streamly >=0.8 && <0.9,
        streamly-cassava,
        vector,
        weigh
